test/semantic-errors/7.pas
program p;
begin writeln(1)end;
var x:integer.
